<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="false"
    android:background="@drawable/background"
    tools:context=".AdminUsersOverviewActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/FOUT"
            android:src="@drawable/school" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bangers"
            android:text="@string/crash1"
            android:textAlignment="viewStart"
            android:textColor="@color/colorAccent"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/login_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/bangers"
            android:text="Scoreboard"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="35sp"
            tools:text="scoreboard" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/score"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/bangers"
            android:text="@string/text_score"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="36sp"
            tools:text="###" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="450dp">

        <ListView
            android:id="@+id/users_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="15sp"
            android:layout_marginBottom="100sp"
            android:background="#CCFFFFFF" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="447dp"
            android:layout_alignTop="@+id/users_overview"
            android:layout_marginTop="0dp">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_margin="16dp"
                android:onClick="goBack"
                android:scaleType="center"
                android:src="@drawable/back_icon"
                app:fabSize="normal" />
        </FrameLayout>
    </RelativeLayout>

</LinearLayout>