<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="false"
    android:background="@drawable/background"
    tools:context=".AdminUsersOverviewActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/FOUT"
            android:src="@drawable/school" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bangers"
            android:text="@string/crash1"
            android:textAlignment="viewStart"
            android:textColor="@color/colorAccent"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/login_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/bangers"
            android:text="@string/admin_dashboard_users_text"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="35sp"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ListView
            android:id="@+id/users_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#CCFFFFFF"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="15sp"
            android:layout_marginBottom="100sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/sortByName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|bottom"
                android:layout_margin="16dp"
                android:onClick="sortName"
                android:scaleType="center"
                android:src="@drawable/ic_sort_by_alpha_black_24dp"
                app:fabSize="normal" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/sortByScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|bottom"
                android:layout_marginStart="100dp"
                android:layout_marginBottom="16dp"
                android:onClick="sortScore"
                android:scaleType="center"
                android:src="@drawable/ic_equalizer_black_24dp"
                app:fabSize="normal" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/addUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|bottom"
                android:layout_marginStart="190dp"
                android:layout_marginBottom="16dp"
                android:onClick="addUser"
                android:scaleType="center"
                android:src="@drawable/plus_icon"
                app:fabSize="normal" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_margin="16dp"
                android:onClick="goBack"
                android:scaleType="center"
                android:src="@drawable/back_icon"
                app:fabSize="normal" />
        </FrameLayout>
    </RelativeLayout>
</LinearLayout>